# Xenon

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER.md  FEATURES.md  INSTALL.bat  LICENSE  README.md  ROADMAP.md  UNINSTALL.bat  package-lock.json  package.json  pnpm-lock.yaml  sdk-diff-tmp.txt  xenonedgehub.icuewidget
.github/: FUNDING.yml
.playwright-mcp/: page-2026-06-03T08-45-51-605Z.yml  page-2026-06-03T08-50-03-527Z.yml  page-2026-06-30T11-45-48-194Z.yml  page-2026-06-30T11-50-11-670Z.yml  page-2026-06-30T12-00-21-861Z.yml  page-2026-07-05T13-57-45-986Z.yml  page-2026-07-05T14-00-16-055Z.yml
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: cursor_guard.rs  edge_swipe.rs  focus_guard.rs  gpu.rs  lib.rs  main.rs  monitor.rs  prefs.rs  spotlight_window.rs  tray.rs
apps/native/src-tauri/windows/: hooks.nsh  xenon-bootstrap.ps1
docs/: CNAME  MACOS_PORTABILITY.md  ROADMAP-PLATFORM.md  THEME_SYSTEM.md  WIDGET_SDK.md  analytics.js  consent.js  index.html  privacy.html  streaming-setup.md  supporters-overrides.json  supporters.json  whatsnew-shotlist.md
helper/: AudioHost.cs  DiskScanHost.cs  ForegroundHost.cs  HotkeyHost.cs  IndexHost.cs  JsonOut.cs  MediaHost.cs  NotificationHost.cs  Program.cs  ScreenHost.cs  ShellDelete.cs  WindowsTool.cs  XenonHelper.csproj
icue/: .gitignore  README.md
report corsair/: Xenon-CORSAIR-Presentation.html  Xenon-Demo-Runbook.html  Xenon-Feature-CheatSheet.html  Xenon-Roadmap-IT.md  (+2 more)
(+647 files in other folders)
